=== HEAD

* Add AssociationReflection class (subclass of Hash), to make calling a couple of private Model methods unnecessary (jeremyevans)

* Change hook methods so that if a tag/method is specified it overwrites an existing hook block with the same tag/method (jeremyevans)

=== 1.5.1 (2008-04-30)

* Fix Dataset#eager_graph when not all objects have associated objects (jeremyevans)

=== 1.5.0 (2008-04-29)

* Make the validation errors API compatible with Merb (Inviz)

* Add validates_uniqueness_of, for protecting against duplicate entries in the database (neaf, jeremyevans)

* Alias Model#dataset= to Model#set_dataset (tmm1)

* Make some Model class methods private: def_hook_method, hooks, add_hook, plugin_module, plugin_gem (jeremyevans)

* Add the eager! and eager_graph! mutation methods to model datasets (jeremyevans)

* Remove Model.database_opened (jeremyevans)

* Remove Model.super_dataset (jeremyevans)

* Deprecate .create_with_params, .create_with, #set, #update, #update_with, and #new_record from Sequel::Model (jeremyevans)

* Add Model.def_dataset_method, for defining methods on the model that reference methods on the dataset (jeremyevans)

* Deprecate Model.method_missing, add dataset methods to Model via metaprogramming (jeremyevans)

* Remove Model.join, so it is the same as Dataset#join (jeremyevans)

* Use reciprocal associations for all types of associations in the getter/setter/add_/remove_ methods (jeremyevans)

* Fix many_to_one associations to cache negative lookups (jeremyevans)

* Change Model#=== to always be false if the primary key is nil (jeremyevans)

* Add Model#hash, which should be unique for a given class and primary key (or values if primary key is nil) (jeremyevans)

* Add Model#eql? as a alias to Model#== (jeremyevans)

* Make Model#reload clear any cached associations (jeremyevans)

* No longer depend on the assistance gem, merge the Inflector and Validations code (jeremyevans)
