@@ -1,5 +1,7 @@
 === HEAD
 
+* Allow an array of arrays instead of a hash when specifying conditions (jeremyevans)
+
 * Add Sequel::DBI::Database#lowercase, for lowercasing column names (jamesearl)
 
 * Remove Dataset#extend_with_destroy, which may break code that uses Dataset#set_model directly and expects the destroy method to be added (jeremyevans)
