@@ -1,5 +1,7 @@
 === HEAD
 
+* Add the :join_type, :graph_conditions, and :graph_join_conditions association options, used when eager graphing (jeremyevans)
+
 * Add AssociationReflection class (subclass of Hash), to make calling a couple of private Model methods unnecessary (jeremyevans)
 
 * Change hook methods so that if a tag/method is specified it overwrites an existing hook block with the same tag/method (jeremyevans)
